--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,14 +1,16 @@
 .Weather {
+    background-color: rgb(54, 145, 151);
     font-family: Arial, sans-serif;
     border: 1px solid #dadde1;
     padding: 16px;
     margin: 30px auto;
     border-radius: 4px;
-    color: rgb(135,135,135);
+    color: rgb(15, 13, 13);
+    border-radius: 20px;
 }
 
 .Weather h1 {
-    color: #878787;
+    color: #080707;
     font-size: 24px;
     font-weight: 100;
     margin: 20px 0 0 0 ;
@@ -24,6 +26,7 @@
     font-weight: 100;
     line-height: 19px;
     list-style: none;
+    
 }
 .Weather img {
     height: 64px;
@@ -39,13 +42,9 @@
 
 }
 .Weather .unit {
-    color: rgb(11, 11, 243);
+    color: rgb(33,33,33);
     font-size: 18px;
     font-weight:bold;
     position:relative;
     top: -20px;
-    margin-left: 5px;
-
-
-
 }
